--- a/201-Modern-Operating-Systems.org
+++ b/201-Modern-Operating-Systems.org
@@ -1,6 +1,6 @@
 * <<<CP1201>>> MODERN OPERATING SYSTEMS
 :properties:
-:author: H Shahul Hamead, S Lakshmi Priya
+:author: Chitra Babu, H Shahul Hamead
 :date: 28 June 2018
 :end:
 
@@ -71,6 +71,19 @@ After the completion of this course, students will be able to:
 - Apply resource handling problems in real time environment (K3).
 - Install and work with modern OS and comprehend its practical
   design (K3).
+  
+  #+NAME: co-po-mapping
+
+|                |    | PO1 | PO2 | PO3 | PO4 | PO5 | PO6 | PO7 | PO8 | PO9 | PO10 | PO11 |   
+|                |    | K3  |  K6 | K6  |  K6 | K6  |     |     |     |     |      |      |     
+| CO1            | K2 | 3   |   2 |  2  |     |  3  |  1  |  1  |     |  1  |      |  1   |     
+| CO2            | K3 | 2   |   2 |  2  |     |     |     |     |     |     |      |      |      
+| CO3            | K3 | 3   |   2 |  2  |     |  2  |  1  |  1  |     |  1  |      |  1   |      
+| CO4            | K3 | 3   |   2 |  2  |     |  2  |  1  |  1  |     |  1  |      |  1   |      
+| CO5            | K4 | 3   |   2 |  2  |     |     |     |     |     |     |      |  1   |          
+| Score          |    | 14  |  10 | 10  |     |  7  |  6  |  3  |     |  3  |      |  4   |      
+| Course Mapping |    | 3   |   2 |  2  |     |  2  |  2  |  1  |     |  1  |      |  3   |  
+      
       
 ** References
 1. Andrew S. Tanenbaum and Herbert Bos, ``Modern Operating Systems'',
