--- a/201-Modern-Operating-Systems.org
+++ b/201-Modern-Operating-Systems.org
@@ -1,7 +1,7 @@
 * <<<CP1201>>> MODERN OPERATING SYSTEMS
 :properties:
-:author: H Shahul Hamead, S Lakshmi Priya
-:date: 28 June 2018
+:author: Dr.Chitra Babu, Mr.H.Shahul Hamead
+:date: 18 April 2022
 :end:
 
 #+startup: showall
@@ -71,6 +71,18 @@ After the completion of this course, students will be able to:
 - Apply resource handling problems in real time environment (K3).
 - Install and work with modern OS and comprehend its practical
   design (K3).
+  
+#+NAME: co-po-mapping
+
+|                |    | PO1 | PO2 | PO3 | PO4 | PO5 | PO6 | PO7 | PO8 | PO9 | PO10 | PO11 |   
+|                |    | K3  |  K6 | K6  |  K6 | K6  |     |     |     |     |      |      |     
+| CO1            | K3 | 3   |   2 |  2  |     |  3  |  1  |  1  |     |  1  |      |   1  |     
+| CO2            | K2 | 2   |   2 |  2  |     |     |     |     |     |     |      |   1  |      
+| CO3            | K3 | 3   |   2 |  2  |     |  2  |  1  |  1  |     |  1  |      |   1  |      
+| CO4            | K3 | 3   |   2 |  2  |     |  2  |  1  |  1  |     |  1  |      |   1  |      
+| CO5            | K3 | 3   |   2 |  2  |     |     |     |     |     |     |      |   1  |          
+| Score          |    | 14  |   10|  10 |     |  7  |  3  |  3  |     |  3  |      |   5  |      
+| Course Mapping |    | 3   |   2 |  2  |     |  2  |  1  |  1  |     |  1  |      |   2  |   
       
 ** References
 1. Andrew S. Tanenbaum and Herbert Bos, ``Modern Operating Systems'',
